Fixed overflow items.

--- a/styles/cinemaByMovie.scss
+++ b/styles/cinemaByMovie.scss
@@ -37,6 +37,9 @@
 	width: 95vw;
 	padding: 5vw;
 }
+.cinema__cardItems {
+	padding-bottom: 6rem;
+}
 .cinema__cardItem {
   position: relative;
 	z-index: 0;
